--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
  <section class='container'>
   <hgroup>
-    <h1>Welcome to your first static nginx application on OpenShift</h1>
+    <h1>Welcome to OpenShift World</h1>
   </hgroup>
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
