--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
  <section class='container'>
   <hgroup>
-    <h1>Nonu Puttu</h1>
+    <h1>Code Change Successful</h1>
   </hgroup>
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
